--- a/style.css
+++ b/style.css
@@ -143,3 +143,20 @@ body{
     justify-content: center;
     align-items: center;
 }
+.addMusicContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.addInput {
+    padding: 5px;
+    border: 2px solid black ;
+    border-radius: 10px;
+    margin: 4px 0;
+}
+
+.addMusicBtn{
+ border-radius: 25px;
+ border: 2px solid black;
+}
